--- a/index.html
+++ b/index.html
@@ -38,12 +38,8 @@
         
         <div class="input-group">
           <label>Dirección de Fuerza (φ) [°]:</label>
-          <select name="phi" required>
-            <option value="0">0° (Horizontal, empujando arriba)</option>
-            <option value="90">90° (Vertical, levantando)</option>
-            <option value="180">180° (Horizontal, empujando abajo)</option>
-            <option value="270">270° (Vertical, aplastando)</option>
-          </select>
+          <small>(Ángulo respecto a la superficie del plano)</small>
+          <input type="number" name="phi" placeholder="Ej: 30 o -15" required>
         </div>
         
         <button type="submit">Simular Física</button>
